methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur()==true) {
  ^