methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur()==false){
     avance()
  	if (getCouleurSol()==Color.green){
    	recule()
    	return true
  }
  	else {
    	recule()
    	return false
  }
  }
  if (estFaceMur()==true) {
    return false
  }
}